secondfile/objects/DHStatus_LU_Status_Specific_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Specific Request Status- LU Status Specific Details</description>
    <fields>
        <fullName>Contact_Name_1__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_2__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number_1__c</fullName>
        <label>Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number_2__c</fullName>
        <label>Contact Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Due_Date__c</fullName>
        <label>Customer Requested Due Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Access_Service_Request_Statuse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Service Requests Statuse--DHStatus-Access Service Request Statuse</description>
        <label>DHStatus-Access Service Request Statuse</label>
        <referenceTo>DHStatus_Access_Service_Request_Statuse__c</referenceTo>
        <relationshipLabel>DHStatus-LU Status Specific Details</relationshipLabel>
        <relationshipName>DHStatus_LU_Status_Specific_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVC_Number__c</fullName>
        <label>EVC Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Tag__c</fullName>
        <label>Error Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ios_Reference_Number__c</fullName>
        <label>Ios Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Request_Verison__c</fullName>
        <label>Notification Request Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type_1__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type_2__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Occurence__c</fullName>
        <label>Number Of Occurence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Representative_Details_1__c</fullName>
        <label>Provider Representative Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Representative_Details_2__c</fullName>
        <label>Provider Representative Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <label>Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_1__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_2__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Date_TimeStamp__c</fullName>
        <label>Sent Date TimeStamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_Indicator_2__c</fullName>
        <label>Supplement Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_Indicator_3__c</fullName>
        <label>Supplement Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplement_Indicator__c</fullName>
        <label>Supplement Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uni_Reference_Number__c</fullName>
        <label>Uni Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-LU Status Specific Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DHStatus_Access_Service_Request_Statuse__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LSS-{00000}</displayFormat>
        <label>DHStatus-LU Status Specific Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-LU Status Specific Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>